# telecommunicator

./: .gitignore  AGENTS.md  README.md  requirements.txt  run_server.py  server_config.example.json  verify_widgets.py
.github/workflows/: build-server.yml  python-app.yml
alembic/versions/: 0001_initial_schema.py  0002_add_indexes.py  0003_add_room_type.py  0004_set_personal_chat_types.py  0005_create_room_files_table.py  0006_add_e2ee_fields.py  0007_add_sender_encrypted_blob.py  0008_add_file_e2ee_fields.py
app/: config.py  main.py
app/auth/: deps.py  version.py
app/db/: engine.py
app/models/: file.py  message.py  room.py  user.py
app/routers/: auth.py  backup.py  messages.py  rooms.py  server.py  users.py  ws.py
app/schemas/: auth.py  backup.py  files.py  messages.py  rooms.py  users.py
app/services/: auth_service.py  file_service.py  message_service.py  room_service.py  user_service.py
app/ws/: connection_manager.py
client/: README.md  config.py  localization.py  main.py  pyproject.toml  requirements.txt  state.py
client/api/: http_client.py  ws_client.py
client/cache/: __init__.py  cache_manager.py
client/crypto/: __init__.py  file_crypto.py  key_backup.py  key_cache.py  key_generator.py  message_crypto.py
client/deployer/: __init__.py  server_manager.py  ssh_client.py
client/locales/: en.yml  ru.yml
client/src/: main.py
client/src/assets/: constants.py
client/src/ui/: login.py  register.py  shared.py
client/src/views/: __init__.py  login.py  register.py
client/storage/: credentials.py  settings.py
client/storage/data/: messenger_settings.json
client/views/: chat_list_view.py  login_view.py  profile_view.py  register_view.py  room_list_view.py  room_settings_view.py  room_view.py  server_deploy_view.py
client/views/widgets/: emoji_picker.py  formatting_toolbar.py  markdown_viewer.py
scripts/: build_server_package.py
tests/: conftest.py  test_auth.py  test_messages.py  test_protocol_version.py  test_rooms.py  test_users.py
tests/client/: conftest.py  test_cache_chat_list.py  test_cache_manager.py  test_file_crypto.py  test_http_client.py  test_message_crypto.py  test_notification_handler.py  test_room_settings_view.py
