[tool.flet]
org = "com.telecommunicator"
product = "Telecommunicator"
description = "A Python messenger client"
version = "1.0.0"

[tool.flet.app]
module = "main"
assets_dir = "assets"

[tool.flet.android]
permissions = [
    "android.permission.INTERNET",
    "android.permission.ACCESS_NETWORK_STATE",
]
adaptive_icon_background = "#2196F3"
adaptive_icon_foreground = "assets/images/icon.png"
min_sdk_version = 26
split_per_abi = true

[tool.flet.compile]
app = true
packages = false
cleanup = false

[build-system]
requires = ["flet[build]==0.84.0"]
build-backend = "flet.build"

[project]
name = "telecommunicator-client"
version = "1.0.0"
description = "Telecommunicator messenger client"
requires-python = ">=3.12"
dependencies = [
    "flet==0.84.0",
    "httpx==0.28.1",
    "websockets==16.0",
    "python-i18n[YAML]==0.3.9",
    "certifi==2025.6.15",
    "cryptography"
]
